t-koma-gateway/tests/client/snapshots/snapshot_tests__client__basic_queries__factual_query.snap
---
source: t-koma-gateway/tests/client/basic_queries.rs
expression: response
---
{
  "id": "[id]",
  "model": "moonshotai/kimi-k2.5",
  "content": [
    {
      "type": "text",
      "text": "4"
    }
  ],
  "usage": {
    "input_tokens": 20,
    "output_tokens": 93
  },
  "stop_reason": "stop"
}
