t-koma-gateway/tests/client/snapshots/snapshot_tests__client__basic_queries__list_response.snap
---
source: t-koma-gateway/tests/client/basic_queries.rs
expression: response
---
{
  "id": "[id]",
  "model": "moonshotai/kimi-k2.5",
  "content": [
    {
      "type": "text",
      "text": " Red, blue, green."
    }
  ],
  "usage": {
    "input_tokens": 34,
    "output_tokens": 225
  },
  "stop_reason": "stop"
}
