t-koma-gateway/tests/client/snapshots/snapshot_tests__client__basic_queries__simple_greeting.snap
---
source: t-koma-gateway/tests/client/basic_queries.rs
expression: response
---
{
  "id": "[id]",
  "type": "message",
  "role": "assistant",
  "model": "claude-sonnet-4-5-20250929",
  "content": [
    {
      "type": "text",
      "text": "Hello from Claude!"
    }
  ],
  "stop_reason": "end_turn",
  "stop_sequence": null,
  "usage": {
    "input_tokens": 19,
    "output_tokens": 7,
    "cache_read_input_tokens": 0,
    "cache_creation_input_tokens": 0
  }
}
